spectec/test/elab/neg/parse-stray-non-ascii-char.t
  $ ./main.exe parse-stray-non-ascii-char.spectec 2>&1
  error: misplaced unicode character
    --> parse-stray-non-ascii-char.spectec:3:1
    |
  3 | α
    | ^^
    = source: parse
  [1]
